@@ -77,6 +77,7 @@
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuItem80">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="A Conciliar"/>
+                    <Property name="enabled" type="boolean" value="false"/>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem80ActionPerformed"/>
